--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>Car Database</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-<head>
-    <meta charset="utf-8">
-    <title>ChassisCarDB</title>
-    <base href="/">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-
-<body class="bg-secondary">
+  <body class="bg-secondary">
     <ccd-root class=""></ccd-root>
-</body>
-
+  </body>
 </html>
